syntax = "proto3";

option go_package = "github.com/slyngdk/nebula-provisioner/protocol";

package protocol;

service AgentService {
    rpc Enroll (EnrollRequest) returns (EnrollResponse) {}
}

// The request message containing the user's name.
message EnrollRequest {
    string token = 1;
}

// The response message containing the greetings
message EnrollResponse {
}
